--- a/index.html
+++ b/index.html
@@ -11,19 +11,361 @@
   <meta property="og:type" content="website">
   <meta property="og:description" content="Ezen suwon B2O2">
   <meta property="og:site_name" content="knotters homepage">
+
   <!-- favicon -->
-  <link rel="shortcut icon" href="./images/index_img/Knotter_favicon.ico">
+  <link rel="shortcut icon" href="./common/images/logo/favicon.png">
+
   <title>portfolio</title>
+
   <!-- reset -->
   <link rel="stylesheet" href="./common/minireset.min.css">
   <!-- font-->
-  <link rel="stylesheet" href="./common/font.css">
+  <link rel="stylesheet" href="./common/fonts/font.css">
    <!-- style.css -->
-   <link rel="stylesheet" href="./style/index.css">
-  <style>
-  </style>
+   <link rel="stylesheet" href="./common/style/index_style.css">
+   
+   <!-- Link Swiper's CSS -->
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+ 
+   <!-- Demo styles -->
+   <style>
+    :root {
+      --swiper-theme-color: #ffa8dc;
+    }
+    :root {
+    --swiper-navigation-size: 80px;
+  }
+     html,
+     body {
+       height: 100%;
+     }
+ 
+     .swiper {
+        position: absolute;
+        top: 12%; right: 1%;
+        width: 100%;
+      }
+ 
+     .swiper-slide {
+       text-align: center;
+       font-size: 18px;
+ 
+       /* Center slide text vertically */
+       display: -webkit-box;
+       display: -ms-flexbox;
+       display: -webkit-flex;
+       display: flex;
+       -webkit-box-pack: center;
+       -ms-flex-pack: center;
+       -webkit-justify-content: center;
+       justify-content: center;
+       -webkit-box-align: center;
+       -ms-flex-align: center;
+       -webkit-align-items: center;
+       align-items: center;
+     }
+ 
+     .swiper-slide img {
+       display: block;
+       object-fit: cover;
+     }
+
+     /* .swiper-pagination-horizontal {
+      position: absolute;
+      bottom: 0;
+     } */
+   </style>
+
 </head>
 <body>
-  
+  <header>
+    <h1><a href="#"><img src="./common/images/logo/header-logo-wh.png" alt="main_Logo"></a></h1>
+    <ul class="Menu">
+      <li><a href="#">Main</a></li>
+      <li><a href="#">Work</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </header>
+
+
+  <main>
+    <img class="mainBackground mainBackground_rh" src="./common/images/object/mainBackground-rh.png" alt="mainBackground-rh">
+    <img class="mainBackground mainBackground_lf" src="./common/images/object/mainBackground-lf.png" alt="mainBackground-lf">
+    <h4>안녕하세요!</h4>
+    <div class="mainBackground mainTitle">
+      <h2 class="mgTop mgRt">생기를</h2>
+      <p>불어넣는</p>
+      <h2 class="mgTop mgRt">디자이너 이혜진</h2>
+      <p>입니다.</p>
+    </div>
+    <div class="mainBackground arrow">
+      <div class="viewTitle">
+        <h3>view my</h3>
+        <h2>Portfolio</h2>
+      </div>
+      <img class="arrowImg" src="./common/images/object/arrow.png" alt="arrow">
+    </div>
+    <div class="mainBackground Art_star">
+      <img class="star Star1" src="./common/images/object/star1.png" alt="star">
+      <img class="star Star2" src="./common/images/object/star2(black-line).png" alt="star">
+      <img class="star Star3" src="./common/images/object/star3.png" alt="star">
+      <img class="star Star4" src="./common/images/object/star4.png" alt="star">
+      <img class="star Star5" src="./common/images/object/star5.png" alt="star">
+    </div>
+    <img class="mainBackground main_fonts" src="./common/images/object/main-fonts.png" alt="main-art-font">
+    <img class="mainBackground main_star_playX" src="./common/images/object/main-star(play-x).png" alt="main-star=plau-x">
+  </main>
+
+  <article class="portfolio publishing">
+    <div class="portfolioTitle">
+      <p class="portfolio_subTitle">publishing</p>
+      <h2 class="portfolio_Title">Work</h2>
+      <img src="./common/images/object/portfolioTitle.png" alt="portfolio_Title">
+    </div>
+    <div class="portfolio_Project">
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="slide_title">
+              <p>2022-11</p>
+              <p>KNOTTERS WEB PUBLISHING</p>
+              <p>노터 웹퍼블리싱</p>
+              <p>#팀작업</p><p>#UI/UX</p><p>#JAVASCRIPT</p>
+            </div>
+            <a href="#"><img class="Project_Img" src="./project/project1/img_main_intro.jpg" alt="project1"></a>
+          </div>
+          <div class="swiper-slide">
+            <img src="./project/project1/sudden_02.jpg" alt="project1"></a>
+          </div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 4</div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
+  </article>
+
+  <article class="portfolio package">
+    <div class="portfolioTitle">
+      <p class="portfolio_subTitle">package</p>
+      <h2 class="portfolio_Title">Work</h2>
+      <img class="portfolio_arrow" src="./common/images/object/portfolioTitle.png" alt="portfolio_Title">
+    </div>
+    <div class="portfolio_Project">
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <p>2022-11</p>
+            <p>KNOTTERS WEB PUBLISHING</p>
+            <p>노터 웹퍼블리싱</p>
+            <p>#팀작업</p><p>#UI/UX</p><p>#JAVASCRIPT</p>
+            <a href="#"><img class="Project_Img" src="./project/project1/img_main_intro.jpg" alt="project1"></a>
+          </div>
+          <div class="swiper-slide">
+            <a href="#">
+          </div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 4</div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
+  </article>
+
+  <article class="portfolio web">
+    <div class="portfolioTitle">
+      <p class="portfolio_subTitle">web</p>
+      <h2 class="portfolio_Title">Work</h2>
+      <img class="portfolio_arrow" src="./common/images/object/portfolioTitle.png" alt="portfolio_Title">
+    </div>
+    <div class="portfolio_Project">
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <p>2022-11</p>
+            <p>KNOTTERS WEB PUBLISHING</p>
+            <p>노터 웹퍼블리싱</p>
+            <p>#팀작업</p><p>#UI/UX</p><p>#JAVASCRIPT</p>
+            <a href="#"><img class="Project_Img" src="./project/project1/img_main_intro.jpg" alt="project1"></a>
+          </div>
+          <div class="swiper-slide">Slide 2</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 4</div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
+  </article>
+
+  <article class="portfolio about">
+    <div class="portfolioTitle">
+      <h2 class="portfolio_Title">About</h2>
+      <img 
+      class="portfolio_arrow" src="./common/images/object/portfolioTitle.png" alt="portfolio_Title">
+    </div>
+    <div class="about_mention">
+      <p>안녕하세요-!</p>
+      <h2>작품에 생기를 불어넣는<br>디자이너 이혜진 입니다!</h2>
+      <p>어떤 작품일지라도 작품에 생기를 불어 넣어,<br>살아 숨 쉬는 디자인을 보여드리겠습니다!</p>
+    </div>
+    <div class="about_mention_bg">
+      <h2>#언변 능숙형-ENFJ</h2>
+      <h2>#소나무 같은 생존력</h2>
+      <h2>#빠른 결정력</h2>
+      <h2>#인간 골든 리트리버</h2>
+    </div>
+    <img class="profileImg" src="./common/images/object/IMG_.JPG" alt="img">
+    <img class="aboutStar aboutStar_bkLine" src="./common/images/object/star2(black-line).png" alt="star">
+    <img class="aboutStar aboutStar_bkLine2" src="./common/images/object/star2(black-line).png" alt="star">
+    <img class="aboutStar aboutStar_bk" src="./common/images/object/star5.png" alt="star">
+    <img class="aboutStar aboutStar_bk2" src="./common/images/object/star5.png" alt="star">
+  </article>
+
+  <article class="portfolio about">
+    <div class="portfolioTitle">
+      <h2 class="portfolio_Title">About</h2>
+      <img class="portfolio_arrow" src="./common/images/object/portfolioTitle.png" alt="portfolio_Title">
+    </div>
+    <div class="portfolioSkils">
+      <div class="portfolioSkill skill_Graphic">
+        <h2>그래픽 디자인<br>Tool</h2>
+        <h3>Photoshop/Illustrator<br>Pigma</h3>
+        <ul class="skillMg_Graphic">
+          <li>인물 사진 리터칭</li>
+          <li>이미지 편집&디자인</li>
+          <li>아이콘 및 일러스트 제작</li>
+          <li>박스 전개도 칼선 활용</li>
+          <li>UI/UX 프로토타입 제작</li>
+          <li>UI/UX 콘텐츠 소스 제작</li>
+          <li>UI/UX 와이어프레임 제작</li>
+        </ul>
+      </div>
+      <div class="portfolioSkill skill_Web">
+        <h2>웹 퍼블리싱<br>Tool</h2>
+        <h3>Html5/Css3<br>JavaScript/React</h3>
+        <ul class="skillMg_Web">
+          <li>웹사이트 구축 및 디자인</li>
+          <li>미디어 쿼리를 이용한 반응형 웹 제작</li>
+          <li>다양한 플러그인 및 AIP를 활용</li>
+          <li>웹 접근성과 웹 표준화에 맞춘 콘텐츠 제작</li>
+          <li>Css3 flex&grid&position을 활용한<br>웹 레이아웃 구성</li>
+          <li>자바스크립트 함수프로그래밍을 통해<br>동적인 이벤트 및 애니메이션 구현</li>
+          <li>React 컴포넌트/useState/useEeffect를<br>이용한 UI 제작</li>
+        </ul>
+      </div>
+      <div class="portfolioSkill skill_Git">
+        <h2>로컬 저장소 관리<br>Tool</h2>
+        <h3>Git/GitHubSlack</h3>
+        <ul class="skillMg_Git">
+          <li>Git명령어 활용</li>
+          <li>형상관리 시스템을 통한 버전 관리</li>
+          <li>GitHub를 통해 프로젝트 공유 및 협업</li>
+          <li>프로젝트 진행사항 실시간 수정 및 공유</li>
+        </ul>
+      </div>
+    </div>
+  </article>
+
+  <article class="portfolio about">
+    <div class="portfolioTitle">
+      <h2 class="portfolio_Title">About</h2>
+      <img class="portfolio_arrow" src="./common/images/object/portfolioTitle.png" alt="portfolio_Title">
+    </div>
+    <div class="portfolioPersonals">
+      <div class="portfolioPersonal Basics">
+        <h2>기본 정보</h2>
+        <ul>
+          <li>1997.06.09</li>
+          <li>경기도 안성시 거주</li>
+          <li>건양대학교 시각디자인 전공</li>
+          <li>1717gpwls@naver.com</li>
+        </ul>
+      </div>
+      <div class="portfolioPersonal Career">
+        <h2>경력</h2>
+        <ul>
+          <li>2020.03 ~ 2021.12:뷰티브랜드 디자인팀 근무(총1년10개월)</li>
+          <li>2022.03 ~ 2022.07:뷰티브랜드 디자인팀 근무(총5개월)</li>
+        </ul>
+      </div>
+      <div class="portfolioPersonal Certificate">
+        <h2>자격증</h2>
+        <ul>
+          <li>2017.11.30: ACA포토샵(Adobe Certified Associate Photoshop)</li>
+          <li>2019.11.14: ACA일러스트((Adobe Certified Associate Illustrator)</li>
+          <li>2017.12.24: MOS파워포인트</li>
+          <li>2017.12.24: MOS엑셀</li>
+          <li>2022.08.29: 자동차운전면허증 2종보통</li>
+        </ul>
+      </div>
+      <div class="portfolioPersonal Activity">
+        <h2>대외활동</h2>
+        <ul>
+          <li>2019.09 ~ 2019.09.11: 건양대학교 시각디자인학과 도록 디자인 팀장</li>
+          <li>2019.09: 데마셀 패키지 디자인 참여</li>
+          <li>2019.02 ~ 2019.11: 건양대학교 시각디자인학과 졸업위원회</li>
+          <li>2021.10: 포코어커피 디자인 참여</li>
+          <li>2022.01 ~ 2022.02: 네오게임즈 홍보물 제작 참여</li>
+          <li>2022.09 ~ 2023.02: 웹퍼블리셔 UI/UX 프론트엔드 과정 수료</li>
+        </ul>
+      </div>
+    </div>
+  </article>
+
+  <article class="portfolio contact">
+    <div class="PortfolioBox">
+      <p class="PortfolioText">LeeHyeJin’s Portfolio.</p>
+      <p class="PortfolioText">Thank you for everything.</p>
+    </div>
+    <div class="contactBackground">
+      <img class="contact_Logo" src="./common/images/logo/header-logo.png" alt="contactLogo">
+      <div class="contactBackground_Title">
+        <div class="contactBackgroundFlex contactBackground_MainTitle">
+          <h2>Contact</h2>
+          <ul class="contactBackgroundFlex contact_Menu">
+            <li><a href="#">Main</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+        </div>
+        <div class="contactBackground_SubTitle">
+          <div class="contact_SubTitle Name">
+            <h3>Name</h3>
+            <p>LEEHYEJIN</p>
+          </div>
+          <div class="contact_SubTitle Email">
+            <h3>Email</h3>
+            <p>1717gpwls@naver.com</p>
+          </div>
+          <div class="contact_SubTitle Design">
+            <h3>Design</h3>
+            <p>UI/UX, PACKAGE, PUBLISHING</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </article>
+
+
+
+  <footer>
+    <h3>LeeHyeJin’s Portfolio.</h3>
+    <p>© 2023 Hye Jin LEE. vitality life.</p>
+  </footer>
+
+
+  <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+
+  <!-- Initialize Swiper -->
+  <script>
+    var swiper = new Swiper(".mySwiper", {
+      pagination: {
+        el: ".swiper-pagination",
+        dynamicBullets: true,
+      },
+    });
+  </script>
 </body>
 </html>
