--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <!-- favicon -->
   <link rel="shortcut icon" href="./common/images/logo/favicon.png">
 
+  <!-- scroll To 아이콘 -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,100,0,0" />
+
   <title>portfolio</title>
 
   <!-- reset -->
@@ -23,63 +26,93 @@
   <link rel="stylesheet" href="./common/fonts/font.css">
    <!-- style.css -->
    <link rel="stylesheet" href="./common/style/index_style.css">
-   
+   <!-- js -->
+   <script defer src="./common/style/index.js"></script>
    <!-- Link Swiper's CSS -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+  <!-- jQuery-->
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-migrate-3.4.0.min.js"></script>
  
    <!-- Demo styles -->
    <style>
-    :root {
-      --swiper-theme-color: #ffa8dc;
+    html,
+    body {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper {
+      width: 75%;
+      height: 100%;
+
+      position: absolute;
+      top: 2%; right: 0;
+    }
+
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+    }
+
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .swiper-slide {
+      width: 75%;
+    }
+
+    /* .swiper-slide:nth-child(2n) {
+      width: 10%;
+    }
+
+    .swiper-slide:nth-child(3n) {
+      width: 40%;
+    } */
+
+    
+    .swiper-pagination-bullet {
+    width: var(--swiper-pagination-bullet-width,var(--swiper-pagination-bullet-size,8px));
+    height: var(--swiper-pagination-bullet-height,var(--swiper-pagination-bullet-size,8px));
+    display: inline-block;
+    border-radius: 50%;
+    background: var(--swiper-pagination-bullet-inactive-color,#F593E7);
+    opacity: var(--swiper-pagination-bullet-inactive-opacity, .2);
     }
     :root {
-    --swiper-navigation-size: 80px;
-  }
-     html,
-     body {
-       height: 100%;
-     }
- 
-     .swiper {
-        position: absolute;
-        top: 12%; right: 1%;
-        width: 100%;
-      }
- 
-     .swiper-slide {
-       text-align: center;
-       font-size: 18px;
- 
-       /* Center slide text vertically */
-       display: -webkit-box;
-       display: -ms-flexbox;
-       display: -webkit-flex;
-       display: flex;
-       -webkit-box-pack: center;
-       -ms-flex-pack: center;
-       -webkit-justify-content: center;
-       justify-content: center;
-       -webkit-box-align: center;
-       -ms-flex-align: center;
-       -webkit-align-items: center;
-       align-items: center;
-     }
- 
-     .swiper-slide img {
-       display: block;
-       object-fit: cover;
-     }
-
-     /* .swiper-pagination-horizontal {
+    --swiper-navigation-size: 200px;
+    }
+    :root {
+        --swiper-theme-color: #F593E7;
+    }
+    .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
       position: absolute;
-      bottom: 0;
-     } */
+      bottom: 5%; left: 0;
+    }
    </style>
 
 </head>
 <body>
   <header>
-    <h1><a href="#"><img src="./common/images/logo/header-logo-wh.png" alt="main_Logo"></a></h1>
+    <h1><a href="#"><img src="./common/images/logo/header-logo-bk.png" alt="main_Logo"></a></h1>
     <ul class="Menu">
       <li><a href="#">Main</a></li>
       <li><a href="#">Work</a></li>
@@ -89,8 +122,8 @@
   </header>
 
 
-  <main>
-    <img class="mainBackground mainBackground_rh" src="./common/images/object/mainBackground-rh.png" alt="mainBackground-rh">
+  <main class="page">
+    <img class="mainBackground mainBackground_rh" src="./common/images/object/mainBackground-rh-2.png" alt="mainBackground-rh">
     <img class="mainBackground mainBackground_lf" src="./common/images/object/mainBackground-lf.png" alt="mainBackground-lf">
     <h4>안녕하세요!</h4>
     <div class="mainBackground mainTitle">
@@ -117,88 +150,151 @@
     <img class="mainBackground main_star_playX" src="./common/images/object/main-star(play-x).png" alt="main-star=plau-x">
   </main>
 
-  <article class="portfolio publishing">
+  <article class="portfolio publishing page">
     <div class="portfolioTitle">
       <p class="portfolio_subTitle">publishing</p>
       <h2 class="portfolio_Title">Work</h2>
-      <img src="./common/images/object/portfolioTitle.png" alt="portfolio_Title">
+      <img class="portfolio_arrow" src="./common/images/object/portfolioTitleWT.png" alt="portfolio_Title">
     </div>
     <div class="portfolio_Project">
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="slide_title">
-              <p>2022-11</p>
-              <p>KNOTTERS WEB PUBLISHING</p>
-              <p>노터 웹퍼블리싱</p>
-              <p>#팀작업</p><p>#UI/UX</p><p>#JAVASCRIPT</p>
+              <p class="projectDate">2022-11</p>
+              <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
+              <p class="projectName_Kr">노터 웹퍼블리싱</p>
+              <div class="projectItmBox">
+                <p class="projectItm">#팀작업</p><p class="projectItm">#UI/UX</p><p class="projectItm">#JAVASCRIPT</p>
+              </div>
             </div>
             <a href="#"><img class="Project_Img" src="./project/project1/img_main_intro.jpg" alt="project1"></a>
           </div>
           <div class="swiper-slide">
-            <img src="./project/project1/sudden_02.jpg" alt="project1"></a>
+            <div class="slide_title">
+              <p class="projectDate">2022-11</p>
+              <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
+              <p class="projectName_Kr">노터 웹퍼블리싱</p>
+              <div class="projectItmBox">
+                <p class="projectItm">#팀작업</p><p class="projectItm">#UI/UX</p><p class="projectItm">#JAVASCRIPT</p>
+              </div>
+            </div>
+            <a href="#"><img class="Project_Img" src="./project/project1/img_main_intro.jpg" alt="project1"></a>
           </div>
-          <div class="swiper-slide">Slide 3</div>
-          <div class="swiper-slide">Slide 4</div>
+          <div class="swiper-slide">
+            <div class="slide_title">
+              <p class="projectDate">2022-11</p>
+              <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
+              <p class="projectName_Kr">노터 웹퍼블리싱</p>
+              <div class="projectItmBox">
+                <p class="projectItm">#팀작업</p><p class="projectItm">#UI/UX</p><p class="projectItm">#JAVASCRIPT</p>
+              </div>
+            </div>
+            <a href="#"><img class="Project_Img" src="./project/project1/img_main_intro.jpg" alt="project1"></a>
+          </div>
         </div>
         <div class="swiper-pagination"></div>
       </div>
     </div>
   </article>
 
-  <article class="portfolio package">
+  <article class="portfolio package page">
     <div class="portfolioTitle">
       <p class="portfolio_subTitle">package</p>
       <h2 class="portfolio_Title">Work</h2>
-      <img class="portfolio_arrow" src="./common/images/object/portfolioTitle.png" alt="portfolio_Title">
+      <img class="portfolio_arrow" src="./common/images/object/portfolioTitleWT.png" alt="portfolio_Title">
     </div>
     <div class="portfolio_Project">
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <p>2022-11</p>
-            <p>KNOTTERS WEB PUBLISHING</p>
-            <p>노터 웹퍼블리싱</p>
-            <p>#팀작업</p><p>#UI/UX</p><p>#JAVASCRIPT</p>
+            <div class="slide_title">
+              <p class="projectDate">2022-11</p>
+              <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
+              <p class="projectName_Kr">노터 웹퍼블리싱</p>
+              <div class="projectItmBox">
+                <p class="projectItm">#팀작업</p><p class="projectItm">#UI/UX</p><p class="projectItm">#JAVASCRIPT</p>
+              </div>
+            </div>
             <a href="#"><img class="Project_Img" src="./project/project1/img_main_intro.jpg" alt="project1"></a>
           </div>
           <div class="swiper-slide">
-            <a href="#">
+            <div class="slide_title">
+              <p class="projectDate">2022-11</p>
+              <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
+              <p class="projectName_Kr">노터 웹퍼블리싱</p>
+              <div class="projectItmBox">
+                <p class="projectItm">#팀작업</p><p class="projectItm">#UI/UX</p><p class="projectItm">#JAVASCRIPT</p>
+              </div>
+            </div>
+            <a href="#"><img class="Project_Img" src="./project/project1/img_main_intro.jpg" alt="project1"></a>
           </div>
-          <div class="swiper-slide">Slide 3</div>
-          <div class="swiper-slide">Slide 4</div>
+          <div class="swiper-slide">
+            <div class="slide_title">
+              <p class="projectDate">2022-11</p>
+              <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
+              <p class="projectName_Kr">노터 웹퍼블리싱</p>
+              <div class="projectItmBox">
+                <p class="projectItm">#팀작업</p><p class="projectItm">#UI/UX</p><p class="projectItm">#JAVASCRIPT</p>
+              </div>
+            </div>
+            <a href="#"><img class="Project_Img" src="./project/project1/img_main_intro.jpg" alt="project1"></a>
+          </div>
         </div>
         <div class="swiper-pagination"></div>
       </div>
     </div>
   </article>
 
-  <article class="portfolio web">
+  <article class="portfolio web page">
     <div class="portfolioTitle">
       <p class="portfolio_subTitle">web</p>
       <h2 class="portfolio_Title">Work</h2>
-      <img class="portfolio_arrow" src="./common/images/object/portfolioTitle.png" alt="portfolio_Title">
+      <img class="portfolio_arrow" src="./common/images/object/portfolioTitleWT.png" alt="portfolio_Title">
     </div>
     <div class="portfolio_Project">
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <p>2022-11</p>
-            <p>KNOTTERS WEB PUBLISHING</p>
-            <p>노터 웹퍼블리싱</p>
-            <p>#팀작업</p><p>#UI/UX</p><p>#JAVASCRIPT</p>
+            <div class="slide_title">
+              <p class="projectDate">2022-11</p>
+              <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
+              <p class="projectName_Kr">노터 웹퍼블리싱</p>
+              <div class="projectItmBox">
+                <p class="projectItm">#팀작업</p><p class="projectItm">#UI/UX</p><p class="projectItm">#JAVASCRIPT</p>
+              </div>
+            </div>
             <a href="#"><img class="Project_Img" src="./project/project1/img_main_intro.jpg" alt="project1"></a>
           </div>
-          <div class="swiper-slide">Slide 2</div>
-          <div class="swiper-slide">Slide 3</div>
-          <div class="swiper-slide">Slide 4</div>
+          <div class="swiper-slide">
+            <div class="slide_title">
+              <p class="projectDate">2022-11</p>
+              <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
+              <p class="projectName_Kr">노터 웹퍼블리싱</p>
+              <div class="projectItmBox">
+                <p class="projectItm">#팀작업</p><p class="projectItm">#UI/UX</p><p class="projectItm">#JAVASCRIPT</p>
+              </div>
+            </div>
+            <a href="#"><img class="Project_Img" src="./project/project1/img_main_intro.jpg" alt="project1"></a>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide_title">
+              <p class="projectDate">2022-11</p>
+              <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
+              <p class="projectName_Kr">노터 웹퍼블리싱</p>
+              <div class="projectItmBox">
+                <p class="projectItm">#팀작업</p><p class="projectItm">#UI/UX</p><p class="projectItm">#JAVASCRIPT</p>
+              </div>
+            </div>
+            <a href="#"><img class="Project_Img" src="./project/project1/img_main_intro.jpg" alt="project1"></a>
+          </div>
         </div>
         <div class="swiper-pagination"></div>
       </div>
     </div>
   </article>
 
-  <article class="portfolio about">
+  <article class="portfolio about page">
     <div class="portfolioTitle">
       <h2 class="portfolio_Title">About</h2>
       <img 
@@ -267,7 +363,7 @@
     </div>
   </article>
 
-  <article class="portfolio about">
+  <article class="portfolio about page">
     <div class="portfolioTitle">
       <h2 class="portfolio_Title">About</h2>
       <img class="portfolio_arrow" src="./common/images/object/portfolioTitle.png" alt="portfolio_Title">
@@ -313,14 +409,13 @@
     </div>
   </article>
 
-  <article class="portfolio contact">
+  <article class="portfolio contact page">
     <div class="PortfolioBox">
       <p class="PortfolioText">LeeHyeJin’s Portfolio.</p>
       <p class="PortfolioText">Thank you for everything.</p>
     </div>
     <div class="contactBackground">
-      <img class="contact_Logo" src="./common/images/logo/header-logo.png" alt="contactLogo">
-      <div class="contactBackground_Title">
+      <img class="contact_Logo" src="./common/images/object/contactLogo.png" alt="contactLogo">
         <div class="contactBackgroundFlex contactBackground_MainTitle">
           <h2>Contact</h2>
           <ul class="contactBackgroundFlex contact_Menu">
@@ -343,29 +438,45 @@
             <p>UI/UX, PACKAGE, PUBLISHING</p>
           </div>
         </div>
-      </div>
+        <div class="scrollTo">
+          <a href=""><span class="material-symbols-outlined">
+            arrow_circle_up
+            </span></a>
+          <p>Scroll To Top</p>
+        </div>
     </div>
   </article>
 
 
 
   <footer>
-    <h3>LeeHyeJin’s Portfolio.</h3>
-    <p>© 2023 Hye Jin LEE. vitality life.</p>
+    <div class="footerTitle">
+      <div class="footerMain_font">
+        <h3>LeeHyeJin’s Portfolio.</h3>
+        <p class="footerMg">2018 ⎯ 2023 Design</p>
+        <p class="fontColor">&copy; 2023 Hye Jin Lee. vitality life.</p>
+      </div>
+      <div class="copy">
+        
+      </div>
+
+    </div>
   </footer>
 
 
-  <!-- Swiper JS -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+   <!-- Swiper JS -->
+   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
-  <!-- Initialize Swiper -->
-  <script>
-    var swiper = new Swiper(".mySwiper", {
-      pagination: {
-        el: ".swiper-pagination",
-        dynamicBullets: true,
-      },
-    });
-  </script>
+   <!-- Initialize Swiper -->
+   <script>
+     var swiper = new Swiper(".mySwiper", {
+       slidesPerView: "auto",
+       spaceBetween: 30,
+       pagination: {
+         el: ".swiper-pagination",
+         clickable: true,
+       },
+     });
+   </script>
 </body>
 </html>
