--- a/index.html
+++ b/index.html
@@ -90,12 +90,11 @@
 
     
     .swiper-pagination-bullet {
-    width: var(--swiper-pagination-bullet-width,var(--swiper-pagination-bullet-size,8px));
-    height: var(--swiper-pagination-bullet-height,var(--swiper-pagination-bullet-size,8px));
+    width: var(--swiper-pagination-bullet-width,var(--swiper-pagination-bullet-size,12px));
+    height: var(--swiper-pagination-bullet-height,var(--swiper-pagination-bullet-size,12px));
     display: inline-block;
     border-radius: 50%;
     background: var(--swiper-pagination-bullet-inactive-color,#F593E7);
-    opacity: var(--swiper-pagination-bullet-inactive-opacity, .2);
     }
     :root {
     --swiper-navigation-size: 200px;
@@ -103,16 +102,20 @@
     :root {
         --swiper-theme-color: #F593E7;
     }
-    .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
-      position: absolute;
-      bottom: 5%; left: 0;
-    }
+    .swiper-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic, .swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
+    position: absolute;
+    bottom: 6%;
+    left: 35%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+}
    </style>
 
 </head>
 <body>
   <header>
-    <h1><a href="#"><img src="./common/images/logo/header-logo-bk.png" alt="main_Logo"></a></h1>
+    <h1><a href="#"><img class="header_Logo" src="./common/images/logo/header-logo-bk.png" alt="main_Logo"></a></h1>
+    <h1><a href="#"><img class="header_Logo2" src="./common/images/logo/header-logo.png" alt="logo2"></a></h1>
     <ul class="Menu">
       <li><a href="#">Main</a></li>
       <li><a href="#">Work</a></li>
@@ -126,9 +129,10 @@
     <img class="mainBackground mainBackground_rh" src="./common/images/object/mainBackground-rh-2.png" alt="mainBackground-rh">
     <img class="mainBackground mainBackground_lf" src="./common/images/object/mainBackground-lf.png" alt="mainBackground-lf">
     <h4>안녕하세요!</h4>
+    <img class="fontStar" src="./common/images/object/main-fontStar.png" alt="fontStar">
     <div class="mainBackground mainTitle">
-      <h2 class="mgTop mgRt">생기를</h2>
-      <p>불어넣는</p>
+      <h2 class="mgTop mgRt size_fall">생기</h2>
+      <p>를 불어넣는</p>
       <h2 class="mgTop mgRt">디자이너 이혜진</h2>
       <p>입니다.</p>
     </div>
@@ -147,15 +151,10 @@
       <img class="star Star5" src="./common/images/object/star5.png" alt="star">
     </div>
     <img class="mainBackground main_fonts" src="./common/images/object/main-fonts.png" alt="main-art-font">
-    <img class="mainBackground main_star_playX" src="./common/images/object/main-star(play-x).png" alt="main-star=plau-x">
+    <!-- <img class="mainBackground main_star_playX" src="./common/images/object/main-star(play-x).png" alt="main-star=plau-x"> -->
   </main>
 
   <article class="portfolio publishing page">
-    <div class="portfolioTitle">
-      <p class="portfolio_subTitle">publishing</p>
-      <h2 class="portfolio_Title">Work</h2>
-      <img class="portfolio_arrow" src="./common/images/object/portfolioTitleWT.png" alt="portfolio_Title">
-    </div>
     <div class="portfolio_Project">
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
@@ -196,13 +195,18 @@
         <div class="swiper-pagination"></div>
       </div>
     </div>
+    <div class="portfolioTxt">
+      <p class="portfolio_subTitle">publishing</p>
+      <div class="TitleBox_Work">
+        <h2 class="portfolio_Title">Work</h2>
+        <img class="portfolio_arrow portfolio_arrowPF" src="./common/images/object/portfolioTitleWT.png" alt="portfolio_Title">
+      </div>
+    </div>
   </article>
 
   <article class="portfolio package page">
     <div class="portfolioTitle">
       <p class="portfolio_subTitle">package</p>
-      <h2 class="portfolio_Title">Work</h2>
-      <img class="portfolio_arrow" src="./common/images/object/portfolioTitleWT.png" alt="portfolio_Title">
     </div>
     <div class="portfolio_Project">
       <div class="swiper mySwiper">
@@ -247,11 +251,6 @@
   </article>
 
   <article class="portfolio web page">
-    <div class="portfolioTitle">
-      <p class="portfolio_subTitle">web</p>
-      <h2 class="portfolio_Title">Work</h2>
-      <img class="portfolio_arrow" src="./common/images/object/portfolioTitleWT.png" alt="portfolio_Title">
-    </div>
     <div class="portfolio_Project">
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
@@ -473,8 +472,9 @@
        slidesPerView: "auto",
        spaceBetween: 30,
        pagination: {
-         el: ".swiper-pagination",
-         clickable: true,
+        el: ".swiper-pagination",
+        clickable: true,
+        dynamicBullets: true,
        },
      });
    </script>
