오픈그라피 추가

--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- og -->
-    <meta property="og:title" content="knotters" />
-    <meta property="og:url" content="#" />
-    <meta property="og:image" content="/res/image/img_og.png" />
-    <meta property="og:type" content="website" />
-    <meta property="og:description" content="Ezen suwon B2O2" />
-    <meta property="og:site_name" content="knotters homepage" />
+    <meta property="og:type" content="website" /><meta
+    property="og:url"
+    content="https://hyejineeeeee.github.io/portfolio/"
+  />
+    <meta property="og:title" content="portfolio" />
+    <meta property="og:image" content="" />
+    <meta
+      property="og:description"
+      content="생기를 불어넣는 디자이너 이혜진입니다."
+    />
+    <meta property="og:site_name" content="portfolio" />
 
     <!-- favicon -->
     <link rel="shortcut icon" href="./common/images/logo/favicon.png" />
